Fix Firefox textarea and scrollbar issues for chat

--- a/src/component/chat/Chat.scss
+++ b/src/component/chat/Chat.scss
@@ -33,6 +33,11 @@
   padding-left: #{8/$font-size}rem !important;
 }
 
+.scrollBarFix {
+  margin-right: #{1/$font-size}rem !important;
+  padding-right: #{14/$font-size}rem !important;
+}
+
 .scrollContainerMessagesContent {
   composes: scrollContainerContent;
 
